# MyGrep

./: .gitignore  CMakeLists.txt  README.md  main.cpp
my_grep_api/: IActionExecutor.h  MyGrep.cpp  MyGrep.h  Printer.h
test/: CMakeLists.txt  test.cpp
